fix(divider): tweak to the divider dashed and dotted styles
added a small margin so that the two halves of the divider when together don't look odd

--- a/packages/scss/src/components.divider.scss
+++ b/packages/scss/src/components.divider.scss
@@ -16,6 +16,7 @@
   &.c-divider--dashed {
     &:before,
     &:after {
+      margin-right: 1px;
       border-top-style: dashed;
     }
   }
@@ -23,6 +24,7 @@
   &.c-divider--dotted {
     &:before,
     &:after {
+      margin-right: 1px;
       border-top-style: dotted;
     }
   }
